package service

import (
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"erp.localhost/internal/infra/logging"
	shared_models "erp.localhost/internal/infra/model/shared"
	auth_proto "erp.localhost/internal/infra/proto/auth/v1"
	infra_proto "erp.localhost/internal/infra/proto/infra/v1"
)

// TODO: Full test coverage requires RBACManager mock
// See SUGGESTIONS.md for details on missing mock
// These tests cover helper methods that don't require RBACManager

// Helper function to create a minimal RBACService for testing helper methods
func newTestRBACService() *RBACService {
	logger := logging.NewLogger(shared_models.ModuleAuth)
	return &RBACService{
		logger:      logger,
		rbacManager: nil, // Not needed for helper method tests
	}
}

// =============================================================================
// CreateVerifyPermissionsResourceRequest Tests
// =============================================================================

func TestCreateVerifyPermissionsResourceRequest_ValidPairs(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyPermissionsResourceRequest(
		identifier,
		"user", "create",
		"user", "read",
		"role", "update",
	)

	require.NotNil(t, result)
	assert.Equal(t, identifier, result.Identifier)
	assert.Equal(t, auth_proto.ResourceType_RESOURCE_TYPE_PERMISSION, result.ResourceType)
	assert.Len(t, result.Resources, 3)

	// Verify first permission
	perm1 := result.Resources[0].GetPermission()
	require.NotNil(t, perm1)
	assert.Equal(t, "user", perm1.GetPermission().Resource)
	assert.Equal(t, "create", perm1.GetPermission().Action)

	// Verify second permission
	perm2 := result.Resources[1].GetPermission()
	require.NotNil(t, perm2)
	assert.Equal(t, "user", perm2.GetPermission().Resource)
	assert.Equal(t, "read", perm2.GetPermission().Action)

	// Verify third permission
	perm3 := result.Resources[2].GetPermission()
	require.NotNil(t, perm3)
	assert.Equal(t, "role", perm3.GetPermission().Resource)
	assert.Equal(t, "update", perm3.GetPermission().Action)
}

func TestCreateVerifyPermissionsResourceRequest_EmptyIdentifiers(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyPermissionsResourceRequest(identifier)

	assert.Nil(t, result, "Should return nil for empty permission identifiers")
}

func TestCreateVerifyPermissionsResourceRequest_OddNumberOfIdentifiers(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	// Odd number - missing action for last resource
	result := service.CreateVerifyPermissionsResourceRequest(
		identifier,
		"user", "create",
		"user", // Missing action
	)

	assert.Nil(t, result, "Should return nil for odd number of identifiers (unpaired)")
}

func TestCreateVerifyPermissionsResourceRequest_SinglePair(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyPermissionsResourceRequest(
		identifier,
		"user", "create",
	)

	require.NotNil(t, result)
	assert.Len(t, result.Resources, 1)

	perm := result.Resources[0].GetPermission()
	require.NotNil(t, perm)
	assert.Equal(t, "user", perm.GetPermission().Resource)
	assert.Equal(t, "create", perm.GetPermission().Action)
}

// =============================================================================
// CreateVerifyRolesResourceRequest Tests
// =============================================================================

func TestCreateVerifyRolesResourceRequest_ValidRoles(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyRolesResourceRequest(
		identifier,
		"admin",
		"editor",
		"viewer",
	)

	require.NotNil(t, result)
	assert.Equal(t, identifier, result.Identifier)
	assert.Equal(t, auth_proto.ResourceType_RESOURCE_TYPE_ROLE, result.ResourceType)
	assert.Len(t, result.Resources, 3)

	// Verify first role
	role1 := result.Resources[0].GetRole()
	require.NotNil(t, role1)
	assert.Equal(t, "admin", role1.GetRoleName())

	// Verify second role
	role2 := result.Resources[1].GetRole()
	require.NotNil(t, role2)
	assert.Equal(t, "editor", role2.GetRoleName())

	// Verify third role
	role3 := result.Resources[2].GetRole()
	require.NotNil(t, role3)
	assert.Equal(t, "viewer", role3.GetRoleName())
}

func TestCreateVerifyRolesResourceRequest_EmptyRoles(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyRolesResourceRequest(identifier)

	assert.Nil(t, result, "Should return nil for empty roles")
}

func TestCreateVerifyRolesResourceRequest_SingleRole(t *testing.T) {
	service := newTestRBACService()

	identifier := &infra_proto.UserIdentifier{
		TenantId: "tenant-123",
		UserId:   "user-456",
	}

	result := service.CreateVerifyRolesResourceRequest(identifier, "admin")

	require.NotNil(t, result)
	assert.Len(t, result.Resources, 1)

	role := result.Resources[0].GetRole()
	require.NotNil(t, role)
	assert.Equal(t, "admin", role.GetRoleName())
}

// =============================================================================
// Tests That Cannot Be Written (Missing RBACManager Mock)
// =============================================================================

// TODO: The following methods require RBACManager mock to test:
// - CreateResource() - needs mock.CreateResource()
// - UpdateResource() - needs mock.UpdateResource()
// - GetResource() - needs mock.GetResource()
// - ListResources() - needs mock.GetResources()
// - DeleteResource() - needs mock.DeleteResource()
// - VerifyUserResource() - needs mock.CheckUserPermissions() and mock.CheckUserRoles()
// - VerifyUserPermissions() - wrapper around VerifyUserResource()
// - VerifyUserRoles() - wrapper around VerifyUserResource()
//
// To enable these tests:
// 1. Implement DIP fix from PLAN.md
// 2. Create RBACManager interface
// 3. Generate mock: go generate ./internal/auth/rbac/
// 4. Write tests using mock
//
// See SUGGESTIONS.md for complete details
